// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scrambled Grid component renders correctly when empty 1`] = `
<div
  class="grid"
>
  <table>
    <tbody>
      <tr
        style="height: 46px;"
      >
        <td
          class="cell"
        >
          <div
            class="field"
          >
            <div
              class="field dimmer"
            />
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="field"
          >
            <div
              class="field dimmer"
            />
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="field"
          >
            <div
              class="field dimmer"
            />
          </div>
        </td>
      </tr>
      <tr
        style="height: 46px;"
      >
        <td
          class="cell"
        >
          <div
            class="field"
          >
            <div
              class="field dimmer"
            />
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="field"
          >
            <div
              class="field dimmer"
            />
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="field"
          >
            <div
              class="field dimmer"
            />
          </div>
        </td>
      </tr>
      <tr
        style="height: 46px;"
      >
        <td
          class="cell"
        >
          <div
            class="field"
          >
            <div
              class="field dimmer"
            />
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="field"
          >
            <div
              class="field dimmer"
            />
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="field"
          >
            <div
              class="field dimmer"
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`scrambled Grid component renders correctly with preview tiles 1`] = `
<div
  class="grid"
>
  <table>
    <tbody>
      <tr
        style="height: 46px;"
      >
        <td
          class="cell"
        >
          <div
            class="field"
          >
            <div
              class="tile"
            >
              <div
                class="letter"
              >
                A
              </div>
              <div
                class="points"
              >
                1
              </div>
            </div>
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="field"
          >
            <div
              class="tile tile_highlighted"
            >
              <div
                class="letter"
              >
                ?
              </div>
              <div
                class="points"
              />
            </div>
            <div
              class="field dimmer"
            />
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="field"
            style="background: rgb(22, 145, 159);"
          >
            <div
              class="tile tile_highlighted"
            >
              <div
                class="letter"
              >
                ?
              </div>
              <div
                class="bonus"
                style="background: rgb(22, 145, 159);"
              />
              <div
                class="points"
              />
            </div>
            <div
              class="field dimmer"
            />
          </div>
        </td>
      </tr>
      <tr
        style="height: 46px;"
      >
        <td
          class="cell"
        >
          <div
            class="field"
            style="background: rgb(249, 197, 74);"
          >
            <div
              class="bonus"
            >
              <div
                class="bonus_multiply"
              >
                2
                x
              </div>
              <div
                class="bonus_type"
              >
                game.info.bonuses.word
              </div>
            </div>
            <div
              class="field dimmer"
            />
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="field"
          >
            <div
              class="field dimmer"
            />
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="field"
          >
            <div
              class="field dimmer"
            />
          </div>
        </td>
      </tr>
      <tr
        style="height: 46px;"
      >
        <td
          class="cell"
        >
          <div
            class="field"
          >
            <div
              class="field dimmer"
            />
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="field"
          >
            <div
              class="field dimmer"
            />
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="field"
          >
            <div
              class="field dimmer"
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`scrambled Grid component renders correctly with some tiles 1`] = `
<div
  class="grid"
>
  <table>
    <tbody>
      <tr
        style="height: 46px;"
      >
        <td
          class="cell"
        >
          <div
            class="field"
          >
            <div
              class="tile"
            >
              <div
                class="letter"
              >
                A
              </div>
              <div
                class="points"
              >
                1
              </div>
            </div>
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="field"
          >
            <div
              class="field dimmer"
            />
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="field"
            style="background: rgb(22, 145, 159);"
          >
            <i
              aria-hidden="true"
              class="star big disabled fitted icon"
            />
            <div
              class="field dimmer"
            />
          </div>
        </td>
      </tr>
      <tr
        style="height: 46px;"
      >
        <td
          class="cell"
        >
          <div
            class="field"
            style="background: rgb(249, 197, 74);"
          >
            <div
              class="bonus"
            >
              <div
                class="bonus_multiply"
              >
                2
                x
              </div>
              <div
                class="bonus_type"
              >
                game.info.bonuses.word
              </div>
            </div>
            <div
              class="field dimmer"
            />
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="field"
          >
            <div
              class="field dimmer"
            />
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="field"
          >
            <div
              class="field dimmer"
            />
          </div>
        </td>
      </tr>
      <tr
        style="height: 46px;"
      >
        <td
          class="cell"
        >
          <div
            class="field"
          >
            <div
              class="field dimmer"
            />
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="field"
          >
            <div
              class="field dimmer"
            />
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="field"
          >
            <div
              class="field dimmer"
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`scrambled Grid component renders correctly with temporary tiles 1`] = `
<div
  class="grid"
>
  <table>
    <tbody>
      <tr
        style="height: 46px;"
      >
        <td
          class="cell"
        >
          <div
            class="field"
          >
            <div
              class="tile"
            >
              <div
                class="letter"
              >
                A
              </div>
              <div
                class="points"
              >
                1
              </div>
            </div>
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="field"
          >
            <div
              class="tile tile_highlighted"
            >
              <div
                class="letter"
              >
                B
              </div>
              <div
                class="points"
              >
                3
              </div>
            </div>
            <div
              class="field dimmer"
            />
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="field"
            style="background: rgb(22, 145, 159);"
          >
            <div
              class="tile tile_highlighted"
            >
              <div
                class="letter letter_replacement"
              >
                C
              </div>
              <div
                class="bonus"
                style="background: rgb(22, 145, 159);"
              />
              <div
                class="points"
                style="text-shadow: -1px -1px 0 #16919F, 1px -1px 0 #16919F, -1px  1px 0 #16919F, 1px  1px 0 #16919F;"
              >
                0
              </div>
            </div>
            <div
              class="field dimmer"
            />
          </div>
        </td>
      </tr>
      <tr
        style="height: 46px;"
      >
        <td
          class="cell"
        >
          <div
            class="field"
            style="background: rgb(249, 197, 74);"
          >
            <div
              class="bonus"
            >
              <div
                class="bonus_multiply"
              >
                2
                x
              </div>
              <div
                class="bonus_type"
              >
                game.info.bonuses.word
              </div>
            </div>
            <div
              class="field dimmer"
            />
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="field"
          >
            <div
              class="field dimmer"
            />
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="field"
          >
            <div
              class="field dimmer"
            />
          </div>
        </td>
      </tr>
      <tr
        style="height: 46px;"
      >
        <td
          class="cell"
        >
          <div
            class="field"
          >
            <div
              class="field dimmer"
            />
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="field"
          >
            <div
              class="field dimmer"
            />
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="field"
          >
            <div
              class="field dimmer"
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
